# thes

./: .gitignore  .goutputstream-3ZEUY0  Cargo.toml  README.md
pkg/git/: PKGBUILD
src/: main.rs
