[package]
name = "thes"
version = "0.1.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Offline CLI Thesaurus Tool"
repository = "https://github.com/DefunctLizard/thes/"
documentation = "https://docs.rs/thes"
keywords = ["Thesaurus", "synonym", "command-line", "terminal", "tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thesaurus = "0.1.0"
clap = "2.33.3"
