[package]
name = "thes"
version = "0.1.2"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Offline CLI Thesaurus Tool"
repository = "https://github.com/DefunctLizard/thes/"
keywords = ["thesaurus", "synonym", "cli", "terminal", "tools"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thesaurus = "0.1.3"
clap = "2.33.3"
colored = "2"
shrust = "0.0.7"